tests/e2e/not_allowed/implements.error
Error: syntax error in story at line 1, column 1

1|    implements = 1
      ^^^^^^^^^^

E0030: `implements` is reserved for future use
